# Coursework-3-app-for-job-search-and-obtaining-info-with-connection-to-the-database

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
